osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experiment_bucket_size_precision_too_high.txt
error:
                    experiment bucket size precision is too high,
                    the precision can be at most to the hundredth decimal place

--> main.sml:4:54
     |
   4 |     entity=E1, buckets=['control', 'b'], bucket_sizes=[10, 2.512], version=2,
     |                                                       ^
